# techpark-cpp-homework2

./: .travis.yml  CMakeLists.txt  README.md  input_helpers.c  input_helpers.h  logic_easy.c  logic_easy.h  logic_pro.c  logic_pro.h  main.c  test.cpp
